--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "iron-session": "^8.0.4",
     "next": "15.5.2",
     "phaser": "^3.90.0",
     "react": "19.1.0",
